--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="./js/highlight.pack.js"></script>
     <script src="./js/common.js"></script>
 
-    <title>BEEK 디자인 및 퍼블리싱 가이드</title>
+    <title>BEEKK 디자인 및 퍼블리싱 가이드</title>
 </head>
 <body>
     <div class="index">
@@ -25,9 +25,9 @@
             <div class="inner flex_between">
                 <h1>
                     <a href="./index.html" class="pc flex_center">
-                      <img src="./assets/img/logo.svg" alt="BEEK 로고"> 디자인 및 퍼블리싱 가이드
+                      <img src="./assets/img/logo.svg" alt="BEEKK 로고"> 디자인 및 퍼블리싱 가이드
                     </a>
-                    <a href="./index.html" class="mobile flex_center"><img src="./assets/img/logo.svg" alt="BEEK 로고"></a>
+                    <a href="./index.html" class="mobile flex_center"><img src="./assets/img/logo.svg" alt="BEEKK 로고"></a>
                 </h1>
 
                 <ul class="menu flex_evenly">
@@ -61,7 +61,7 @@
             <!-- 1. #mVisual start -->
             <article class="m_visual flex_center" id="mVisual">
                 <div class="inner flex_col_center">
-                  <h2>BEEK FRONT GUIDE</h2>
+                  <h2>BEEKK FRONT GUIDE</h2>
                   <ul>
                       <li>공생을 위한 쇼핑몰을 설계합니다.</li>
                       <li>bEEK 디자인 & 퍼블리싱 가이드라인</li>
@@ -82,9 +82,9 @@
                             정해진 약속에 따라 코드를 작성하게되면 작업의 효율을 극대화 할 수 있습니다.
                         </p>
                         <p>
-                            BEEK 에 사용된 FRONTEND 단의 모든 코드는 다음의 사항들을 준수하여 작업되었습니다.<br/>
+                            BEEKK 에 사용된 FRONTEND 단의 모든 코드는 다음의 사항들을 준수하여 작업되었습니다.<br/>
                             기본적인 규칙들은 NAVER 에서 제작한 NHN 코딩 컨벤션을 참고하여 제작되었습니다.<br/>
-                            개발을 진행하며 BEEK 내부적으로 회의를 거쳐 필요한 부분들은 새롭게 추가된 규칙들도 존재합니다.
+                            개발을 진행하며 BEEKK 내부적으로 회의를 거쳐 필요한 부분들은 새롭게 추가된 규칙들도 존재합니다.
                         </p>
                         <p>
                             이 문서는 시점에 따라 업데이트 될 수 있습니다.<br/>
@@ -103,7 +103,7 @@
                                     <button class="bg_orange">COMMON CONVENTION &nbsp; +</button>
                                 </dt>
                                 <dd>
-                                    BEEK CORPERATION 의 모든 프로그램에 공통적으로 적용되는 규칙들을 기술합니다.
+                                    BEEKK CORPERATION 의 모든 프로그램에 공통적으로 적용되는 규칙들을 기술합니다.
                                 </dd>
                             </dl>
                         </li>
@@ -114,7 +114,7 @@
                                     <button class="bg_green">PC GUIDE &nbsp; +</button>
                                 </dt>
                               <dd>
-                                BEEK PC 버전에 사용된 UI 정보를 기술합니다.
+                                BEEKK PC 버전에 사용된 UI 정보를 기술합니다.
                               </dd>
                             </dl>
                         </li>
@@ -125,7 +125,7 @@
                                     <button class="bg_blue">MOBILE GUIDE &nbsp; +</button>
                                 </dt>
                                 <dd>
-                                    BEEK MOBILE 버전에 사용된 UI 정보를 기술합니다.
+                                    BEEKK MOBILE 버전에 사용된 UI 정보를 기술합니다.
                                 </dd>
                             </dl>
                         </li>
@@ -139,7 +139,7 @@
         <!-- footer start -->
         <footer class="footer">
           <div class="inner">
-            COPYRIGHT &copy; BEEK. ALL RIGHTS RESERVED
+            COPYRIGHT &copy; BEEKK. ALL RIGHTS RESERVED
           </div>
         </footer>
         <!-- footer end -->
