--- a/common.html
+++ b/common.html
@@ -16,7 +16,7 @@
     <script src="./js/highlight.pack.js"></script>
     <script src="./js/common.js"></script>
 
-    <title>BEEK 공통 가이드</title>
+    <title>BEEKK 공통 가이드</title>
 </head>
 
 <body>
@@ -27,9 +27,9 @@
             <div class="inner flex_between">
                 <h1>
                     <a href="./index.html" class="pc flex_center">
-                    <img src="./assets/img/logo.svg" alt="BEEK 로고"> 디자인 및 퍼블리싱 가이드
+                    <img src="./assets/img/logo.svg" alt="BEEKK 로고"> 디자인 및 퍼블리싱 가이드
                     </a>
-                    <a href="./index.html" class="mobile flex_center"><img src="./assets/img/logo.svg" alt="BEEK 로고"></a>
+                    <a href="./index.html" class="mobile flex_center"><img src="./assets/img/logo.svg" alt="BEEKK 로고"></a>
                 </h1>
 
                 <ul class="menu flex_evenly">
@@ -152,7 +152,7 @@
                                 </h4>
                                 <p>
                                     들여쓰기를 하면 코드의 가독성이 높아지고 전체 HTML 구조를 쉽게 파악 할 수 있어 전체적인 코드의 재생산성을 높여줍니다. <br />
-                                    BEEK 에서는 마크업의 중첩이 깊어질 때마다 자식 요소는 1탭 들여 쓰고, 1탭의 크기는 공백 4칸으로 규정합니다. <br />
+                                    BEEKK 에서는 마크업의 중첩이 깊어질 때마다 자식 요소는 1탭 들여 쓰고, 1탭의 크기는 공백 4칸으로 규정합니다. <br />
                                     문서 내에서는 반드시 탭을 이용하여 들여쓰기를 하며, 탭을 대신하여 공백으로 띄어 들여쓰지 않도록 유의합니다. 
                                 </p>
                             </li>
