--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- css -->
+    <link rel="stylesheet" href="./assets/css/atom-one-dark.min.css">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/common.css">
-    <link rel="stylesheet" href="./assets/css/ver1.css">
+    <!-- <link rel="stylesheet" href="./assets/css/ver1.css"> -->
 
     <!-- js -->
-    <script src="./js/highlight.pack.js"></script>
-    <script src="./js/common.js"></script>
+    <script src="./assets/js/highlight.min.js"></script>
+    <script src="./assets/js/common.js"></script>
 
     <title>BEEKK 디자인 및 퍼블리싱 가이드</title>
 </head>
 <body>
-    <div class="index">
+    <div class="index wrapper">
         <!-- gnb start -->
         <header class="gnb">
             <!-- inner start -->
