--- a/common.html
+++ b/common.html
@@ -79,11 +79,11 @@
                         </li>
                         <li>
                             <a href="#keyword">
-                                3. 약속어 목록
+                                3. 작업 규칙 및 약속어 목록
                             </a>
                         </li>
                         <li>
-                            <a href="#sample">
+                            <a href="#directory">
                                 4. 디렉토리 구조
                             </a>
                         </li>
@@ -487,7 +487,7 @@ readonly
                     </article>
 
                     <article id="keyword">
-                        <h3>3. 약속어 목록</h3>
+                        <h3>3. 작업 규칙 및 약속어 목록</h3>
                         <div>
                             <ol class="list">
                                 <li>
@@ -509,7 +509,7 @@ readonly
                                 </li>
                                 <li>
                                     <h4>
-                                        <span class="badge">1</span>
+                                        <span class="badge">2</span>
                                         반응형 관련
                                     </h4>
                                     <ol class="child_list">
@@ -586,13 +586,45 @@ readonly
                                         </li>
                                     </ol>
                                 </li>
+                                <li>
+                                    <h4>
+                                        <span class="badge">3</span>
+                                        지정된 class 관련
+                                    </h4>
+                                    <ol class="child_list">
+                                        <li> 1. 레이아웃 (layout)</li>
+                                        <li> 2. 조건에 따른 스타일 (condition)</li>
+                                        <li> 3. 버튼 (button)</li>
+                                        <li> 4. 레이블 (label)</li>
+                                        <li> 5. 뱃지 (badge)</li>
+                                    </ol>
+                                </li>
                             </ol>
                         </div>
                     </article>
 
                     <article id="directory">
                         <h3>4. 디렉토리 구조</h3>
-                        <div></div>
+                        <div>
+                            <ol class="list">
+                                <li>
+                                    <h4>
+                                        <span class="badge">1</span>
+                                        기본 디렉토리의 구조
+                                    </h4>
+                                    <ol class="bullet_list">
+                                        <li>BEEKK 의 서비스는 세 가지로 되어있습니다.</li>
+                                        <li>front 단에서의 퍼블리싱 작업은 모노레포 (Mono-Repo) 로 구성하였습니다.</li>
+                                    </ol>
+                                    <div class="line_clear">
+                                        <div class="example_wrap">
+                                            <h5>example</h5>
+                                            <img src="./assets/img/img_directory.png" alt="디렉토리 구조">
+                                        </div>
+                                    </div>
+                                </li>
+                            </ol>
+                        </div>
                     </article>
                 </div>
                 <!-- contents end -->
