--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </p>
                         <p>
                             이 문서는 시점에 따라 업데이트 될 수 있습니다.<br/>
-                            <span class="date">*마지막 업데이트 일 : 2022-05-03</span>
+                            <span class="date">*마지막 업데이트 일 : 2022-06-14</span>
                         </p>
                     <div>
                 </section>
@@ -101,7 +101,7 @@
                             <img src="./assets/img/icon_pen.svg" alt="COMMON CONVENTION 아이콘">
                             <dl>
                                 <dt>
-                                    <button class="bg_orange">COMMON CONVENTION &nbsp; +</button>
+                                    <a href="./common.html" class="bg_orange">COMMON CONVENTION &nbsp; +</a>
                                 </dt>
                                 <dd>
                                     BEEKK CORPERATION 의 모든 프로그램에 공통적으로 적용되는 규칙들을 기술합니다.
@@ -112,7 +112,7 @@
                               <img src="./assets/img/icon_laptop.svg" alt="PC GUIDE 아이콘">
                             <dl>
                                 <dt>
-                                    <button class="bg_green">PC GUIDE &nbsp; +</button>
+                                    <a href="./pc_guide.html" class="bg_green">PC GUIDE &nbsp; +</a>
                                 </dt>
                               <dd>
                                 BEEKK PC 버전에 사용된 UI 정보를 기술합니다.
@@ -123,7 +123,7 @@
                             <img src="./assets/img/icon_mobile.svg" alt="MOBILE GUIDE 아이콘">
                             <dl>
                                 <dt>
-                                    <button class="bg_blue">MOBILE GUIDE &nbsp; +</button>
+                                    <a href="./mobile_guide.html" class="bg_blue">MOBILE GUIDE &nbsp; +</a>
                                 </dt>
                                 <dd>
                                     BEEKK MOBILE 버전에 사용된 UI 정보를 기술합니다.
