--- a/pc_guide.html
+++ b/pc_guide.html
@@ -58,6 +58,7 @@
 
         <!-- container start -->
         <div class="container">
+            준비중
         </div>
 
         <!-- footer start -->
