--- a/common.html
+++ b/common.html
@@ -87,6 +87,11 @@
                                 4. 디렉토리 구조
                             </a>
                         </li>
+                        <li>
+                            <a href="js">
+                                5. JAVASCRIPT
+                            </a>
+                        </li>
                     </ul>
                 </nav>
                 <!-- snb end -->
@@ -793,7 +798,7 @@ readonly
                         </div>
                     </article>
 
-                    <article id="directory">
+                    <article id="js">
                         <h3>5. JAVASCRIPT</h3>
                         <div>
                             <ol class="list">
