링크 소문자로 수정

--- a/common.html
+++ b/common.html
@@ -88,7 +88,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="js">
+                            <a href="#js">
                                 5. JAVASCRIPT
                             </a>
                         </li>
