--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="index wrapper">
         <!-- gnb start -->
-        <header class="gnb include_html" data-include-html="./gnb.html"></header>
+        <header class="gnb include_html" data-include-html="./layout/gnb.html"></header>
         <!-- gnb end -->
 
         <!-- container start -->
@@ -106,11 +106,7 @@
         <!-- container end -->
 
         <!-- footer start -->
-        <footer class="footer">
-          <div class="inner">
-            COPYRIGHT &copy; BEEKK. ALL RIGHTS RESERVED
-          </div>
-        </footer>
+        <footer class="footer include_html" data-include-html="./layout/footer.html"></footer>
         <!-- footer end -->
     </div>
 </body>
