--- a/common.html
+++ b/common.html
@@ -15,6 +15,7 @@
 
     <!-- js -->
     <script src="./assets/js/highlight.min.js"></script>
+    <script src="./assets/js/includeFile.js"></script>
     <script src="./assets/js/common.js"></script>
     
     <title>BEEKK 공통 가이드</title>
@@ -23,40 +24,7 @@
 <body> 
     <div class="common wrapper">
         <!-- gnb start -->
-        <header class="gnb">
-            <!-- inner start -->
-            <div class="inner flex_between">
-                <h1>
-                    <a href="./index.html" class="pc flex_center">
-                    <img src="./assets/img/logo.svg" alt="BEEKK 로고"> 디자인 및 퍼블리싱 가이드
-                    </a>
-                    <a href="./index.html" class="mobile flex_center"><img src="./assets/img/logo.svg" alt="BEEKK 로고"></a>
-                </h1>
-
-                <ul class="menu flex_evenly">
-                    <li>
-                        <a href="./common.html" class="focus-guide">COMMON CONVENTION</a>
-                    </li>
-                    <li class="gnb-bar"></li>
-                    <li>
-                        <a href="./pc_guide.html" class="pc-guide">PC GUIDE</a>
-                    </li>
-                    <li class="gnb-bar"></li>
-                    <li>
-                        <a href="./mobile_guide.html" class="mobile-guide">MOBILE GUIDE</a>
-                    </li>
-                </ul>
-
-                <div class="guide_version_wrap">
-                <label for="guide_version" class="display_none">GUIDE VERSION</label>
-                <select class="guide_version" id="guide_version">
-                <option>Guide 버전1</option>
-                <option>Guide 버전2</option>
-                </select>
-            </div>
-            </div>
-            <!-- inner end -->
-        </header>
+        <header class="gnb include_html" data-include-html="./layout/gnb.html"></header>
         <!-- gnb end -->
 
         <!-- container start -->
@@ -1604,13 +1572,9 @@ const promotion-top //BAD</code></pre>
         </div>
         <!-- container end -->
 
-        <!-- footer start -->
-        <footer class="footer">
-        <div class="inner">
-            COPYRIGHT &copy; LOTTEMART. ALL RIGHTS RESERVED
-        </div>
-        </footer>
-        <!-- footer end -->
+       <!-- footer start -->
+       <footer class="footer include_html" data-include-html="./layout/footer.html"></footer>
+       <!-- footer end -->
     </div>
 </body>
 
